syntax = "proto3";
package cache.v1;
option go_package = "distributed-cache/proto/cache/v1";

service CacheService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
  bool found = 2;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
  int64 ttl_seconds = 3;
}

message SetResponse {
  bool success = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool success = 1;
}